--- a/project6/styles.css
+++ b/project6/styles.css
@@ -91,3 +91,59 @@ footer {
 section h2 {
   text-align: center;
 }
+
+@media (max-width: 768px) {
+    nav {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    nav .nav-buttons {
+      flex-direction: column;
+      width: auto;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+  
+    nav a {
+      width: 100%;
+      padding: 1rem;
+    }
+  
+    .highlight-section {
+      flex-direction: column;
+      margin: 0 1rem 3rem;
+      padding: 1rem;
+    }
+  
+    .main-highlight a img,
+    .playoff-games a img {
+      width: 100%;
+      height: auto;
+    }
+  
+    .playoff-games {
+      width: 100%;
+      align-items: center;
+    }
+  
+    h1 {
+      font-size: 1.5rem;
+    }
+    nav img {
+        height: 50px;
+        margin-left: 0;
+      }
+    
+      nav {
+        padding: 1rem;
+      }
+    
+      .grid {
+        padding: 1rem;
+      }
+    
+      .grid a img {
+        max-width: 100%;
+      }
+  }
