--- a/project6/styles.css
+++ b/project6/styles.css
@@ -29,11 +29,6 @@ nav {
   nav a:hover {
     background-color: #b50909;
   }
-
-  nav .nav-buttons {
-    display: flex;
-    gap: 1.5rem; 
-  }
   
 h1 {
     text-align: center;
@@ -94,15 +89,11 @@ section h2 {
 
 @media (max-width: 768px) {
     nav {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    nav .nav-buttons {
-      flex-direction: column;
-      width: auto;
-      gap: 1rem;
-      margin-top: 1rem;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
     }
   
     nav a {
@@ -132,7 +123,6 @@ section h2 {
     }
     nav img {
         height: 50px;
-        margin-left: 0;
       }
     
       nav {
@@ -147,3 +137,19 @@ section h2 {
         max-width: 100%;
       }
   }
+
+#hamicon {
+  width: 40px;
+  display: none;
+}
+#close {
+    display: none;
+}
+@media only screen and (max-width: 768px) {
+    #hamicon, #close {display: block;}
+    a {display: block;}
+    #navlinks {display: none;}
+    .boxit {display: flex;
+        justify-content: space-between;
+    }
+}
