--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -1,14 +1,24 @@
+html {
+    font-size: 100%; 
+}
+
 h1 {color: #343d46;
     text-align: center;
+    font-size: 2.5rem;
 } 
-h2 {color: #343d46;} 
-h3 {color: #343d46;} 
+h2 {color: #343d46;
+    font-size: 2rem;} 
+h3 {color: #343d46;
+    font-size: 1.5rem;} 
 
-a {color:  #343d46;}
+a {color:  #343d46;
+    font-size: 1rem; }
+
 a:hover {color: #807dba;}
 
 body {background-color: #b0c5ce;
-      color: #36454f;}
+      color: #36454f;
+      font-size: 1rem;}
 
 
 nav {background-color: #344657;
