--- a/project7/styles.css
+++ b/project7/styles.css
@@ -133,7 +133,7 @@ header img {
     background-color: #00338D;
     padding: 2rem;
     width: 100%;
-    margin: 0 auto;
+    margin: 4rem auto 4rem;
     color: white;
     border-radius: 10px;
 }
