--- a/project7/styles.css
+++ b/project7/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Verdana, sans-serif;
   background-color: #f4f4f4;
   color: #1e1e1e;
   line-height: 1.6;
@@ -247,24 +247,36 @@ input[type="submit"]:hover {
   height: 30px;
 }
 
-
-.latest-news {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 1.5rem;
-  margin-top: 2rem;
+.latest-stats {
+  max-width: 600px;
+  margin: 0 auto;
 }
 
-.latest-news article {
-  background-color: #fdfdfd;
-  padding: 1.5rem;
-  border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+.player-stats-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  margin-top: 1rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.player-stats-table th {
+  background-color: #00338D;
+  color: white;
+  padding: 10px;
   text-align: left;
 }
-.latest-news h3 {
-  margin-bottom: 0.5rem;
-  color: #041562;
+
+.player-stats-table td {
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+
+.full-stats-link {
+  color: #00338D;
+  font-weight: bold;
+  display: inline-block;
+  margin-top: 0.75rem;
 }
 
 a,
